--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-	"description" : "The CodeIgniter Application with Composer",
+	"description" : "The CodeIgniter 3 News Tutorial",
+	"license": "MIT",
 	"require": {
-		"php": ">=5.3.2",
+		"php": ">=7.2",
 		"codeigniter/framework": "3.1.*"
 	},
 	"require-dev": {
