--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 		"codeigniter/framework": "3.1.*"
 	},
 	"require-dev": {
-		"mikey179/vfsstream": "1.1.*"
+		"mikey179/vfsstream": "1.1.*",
+		"kenjis/ci-phpunit-test": "2.x-dev"
 	}
 }
