--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	},
 	"require-dev": {
 		"mikey179/vfsstream": "1.1.*",
-		"kenjis/ci-phpunit-test": "2.x-dev"
+		"kenjis/ci-phpunit-test": "2.x-dev",
+		"phpunit/phpunit": "^9.2"
 	}
 }
