chore: downgrade phpunit to 8.5

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/results/
 
 /application/tests/build/
+/application/tests/.phpunit.result.cache
